[project]
name = "hello2468"
version = "0.1.0"
description = "A hello world package for demonstration"
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }
authors = [
    { name="Your Name", email="your@email.com" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourusername/hello2468"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
