[project]
name = "hello2468"
version = "0.1.1"
description = "A hello world package for demonstration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name="Utsav Savaliya", email="utsav.savaliya@pattern.com" }
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Utsav1973/hello2468"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"
